# Android-face_recognition_app

./: README.md  application.jks  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/example/face_recognition_app/: ExampleInstrumentedTest.java
app/src/androidTest/java/com/yadro/face_recognition_app/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt
app/src/main/cpp/presenter/: CMakeLists.txt  presenter.cpp
app/src/main/java/com/example/face_recognition_app/: AddFaceDialogFragment.java  AlignTransform.java  AskToSave.java  BitmapUtils.java  CameraImageGraphic.java  CameraXViewModel.java  Common.java  FaceDetectorProcessor.java  FaceGallery.java  FaceGraphic.java  FaceRecognitionModel.java  FacesList.java  FileAdapter.java  FrameMetadata.java  GalleryObject.java  GraphicOverlay.java  InferenceInfoGraphic.java  MainActivity.java  Presenter.java  ScopedExecutor.java  SettingAdapter.java  Settings.java  TFLiteModel.java  VisionImageProcessor.java  (+1 more)
app/src/main/res/drawable/: button_shape_neitral_oval.xml  button_shape_oval.xml  textlines.xml
app/src/main/res/layout/: activity_ask_to_save.xml  activity_faces_list.xml  activity_main.xml  activity_presenters.xml  activity_settings.xml  dialog.xml  file_item.xml  setting_item.xml
app/src/main/res/menu/: algorithm_menu.xml  device_menu.xml  resolution_menu.xml  threads_menu.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
gradle/wrapper/: gradle-wrapper.properties
(+58 files in other folders)
